수정 : 이미지 저장 유틸
이미지 저장을 Aws S3용으로 추가함

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
 #jpa setting
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_batch_fetch_size: 1000
 
-# logging
-logging.level.org.hibernate.SQL: debug
-logging.level.org.hibernate.org.hibernate.type: trace
-
-spring.config.import=classpath:database.properties, mail.properties
+spring.config.import=classpath:database.properties, mail.properties, spring-cloud.properties
